ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.10
    • Affects Version/s: 8.0.4
    • Component/s: None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.0
    • Hide
      const coll = db.coll;
      assert(coll.drop());
      assert.commandWorked(db.createCollection(coll.getName(), {
          timeseries: {timeField: 't', metaField: 'm'},
      }));
      
      assert.commandWorked(coll.insert([
          {
              "_id": 1,
              "t": new Date(1),
              "m": 1,
          },
          {
              "_id": 2,
              "t": new Date(2),
              "m": 2,
          },
          {
              "_id": 3,
              "t": new Date(3),
              "m": 3,
          },
          {
              "_id": 4,
              "t": new Date(4),
              "m": 4,
          }
      ]))
      
      
      const query = [
          {
              "$match": {
                  "$nor": [
                      {"t": {"$in": []}},
                  ]
              }
          },
          {"$sort": {"m": 1}},
          {"$skip": 1},
          {"$limit": 1}
      ];
      
      jsTestLog(coll.aggregate(query).toArray())
      // outputs 2 documents
      jsTestLog(coll.explain().aggregate(query))
      
      Show
      const coll = db.coll; assert (coll.drop()); assert .commandWorked(db.createCollection(coll.getName(), { timeseries: {timeField: 't' , metaField: 'm' }, })); assert .commandWorked(coll.insert([ { "_id" : 1, "t" : new Date(1), "m" : 1, }, { "_id" : 2, "t" : new Date(2), "m" : 2, }, { "_id" : 3, "t" : new Date(3), "m" : 3, }, { "_id" : 4, "t" : new Date(4), "m" : 4, } ])) const query = [ { "$match" : { "$nor" : [ { "t" : { "$in" : []}}, ] } }, { "$sort" : { "m" : 1}}, { "$skip" : 1}, { "$limit" : 1} ]; jsTestLog(coll.aggregate(query).toArray()) // outputs 2 documents jsTestLog(coll.explain().aggregate(query))
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the repro provided, we have a query that ends with {$limit: 1}, but the query outputs 2 documents.

      The $match at the beginning of the pipeline is always true, but without it I couldn't repro the issue (for now). I think there's some more realistic $match that would also show the problem.

      Also based on the explain, I don't think a time-series collection is required. The "command" field shows we received a "skip 1, limit: 1", but then at the end of the optimized pipeline, there's a "skip 1, limit 2". I'm not aware of any specific skip/limit logic for time-series collections, so I've assigned this to QO.

            Assignee:
            Sopho Kevlishvili (Inactive)
            Reporter:
            Matt Boros
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: