SERVER-100299 modified pipeline optimization for sort-skip-limit on time-series collections to return correct number of documents (#32733)

GitOrigin-RevId: 4a3e101639be82ea3cb021c869cb90d6a3957850